--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.18.0",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.12.2",
+    "bcryptjs": "^3.0.2",
+    "clsx": "^2.1.1",
+    "iron-session": "^8.0.4",
     "lodash": "^4.17.21",
     "mongodb": "^6.20.0",
     "next": "16.0.0",
@@ -22,15 +26,17 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/node": "^20.19.23",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.3.9",
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "prisma": "^6.18.0",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.16",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
-  }
+  },
+  "browserslist": "> 1%"
 }
