--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3010",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
@@ -39,5 +40,8 @@
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
-  "browserslist": "> 1%"
+  "browserslist": "> 1%",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  }
 }
