--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "iron-session": "^8.0.4",
     "lodash": "^4.17.21",
     "mongodb": "^6.20.0",
