--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "iron-session": "^8.0.4",
     "lodash": "^4.17.21",
     "mongodb": "^6.20.0",
-    "next": "16.0.0",
+    "next": "^16.1.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
@@ -35,7 +35,7 @@
     "@types/react-dom": "^19",
     "daisyui": "^5.3.9",
     "eslint": "^9",
-    "eslint-config-next": "16.0.0",
+    "eslint-config-next": "^16.1.1",
     "prisma": "^6.18.0",
     "tailwindcss": "^4.1.16",
     "tsx": "^4.20.6",
